--- a/transfer_hook/programs/ico/Cargo.toml
+++ b/transfer_hook/programs/ico/Cargo.toml
@@ -23,6 +23,7 @@ custom-panic = []
 [dependencies]
 anchor-lang = {version = "0.32.1", features = ["init-if-needed"]}
 anchor-spl = {version = "0.32.1", features = ["token_2022"]}
+spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"], default-features = false }
 
 
 [lints.rust]
