Added edit config and test for the same
Signed-off-by: Tushar-ba <tusharba321@gmail.com>

--- a/transfer_hook/Anchor.toml
+++ b/transfer_hook/Anchor.toml
@@ -13,7 +13,7 @@ transfer_hook = "AjNBZRCm6jsPjPRiZ3hbAitg9KEgCYqKmGm675Fpi6XU"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
